--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "ytdl-core": "^4.11.5",
-    "progress": "^2.0.3",
     "axios": "^1.6.2",
-    "bili-api": "^1.10.1"
+    "bili-api": "^1.10.1",
+    "chalk": "^5.4.1",
+    "cli-table3": "^0.6.5",
+    "figlet": "^1.8.0",
+    "ora": "^8.2.0",
+    "progress": "^2.0.3",
+    "ytdl-core": "^4.11.5"
   }
 }
